--- a/order.html
+++ b/order.html
@@ -6,7 +6,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container form-container">
+    <!-- Убрали класс "container" -->
+    <div class="form-container">
         <h2>Данные для доставки</h2>
         <form id="order-form">
             <input type="text" placeholder="ФИО" required>
