--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
     <footer>
         <p>© 2023 Imperial Caviar</p>
-        <a href="https://t.me/RusPlat_official" class="tg-link">Техподдержка Telegram</a>
+        <a href="https://t.me/imperial_caviar" class="tg-link">Техподдержка Telegram</a>
     </footer>
 
     <script src="script.js"></script>
